--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,32 @@
+/* グローバル変数定義 */
+:root {
+  --primary: #5A5872;
+  --secondary: #FFFFFF;
+  --background: #D3D3D3;
+  --hover-color: #f0f0f0;
+
+  /* フォント */
+  --font-text: 'Inter', sans-serif, serif;
+  --font-heading: 'Jua', 'Meiryo UI', sans-serif, serif;
+
+  /* フォントサイズ */
+  --font-size-base: 16px;
+  --font-size-h1: 2rem;
+  --font-size-h2: 1.5rem;
+  --font-size-h3: 1.25rem;
+
+  /* 行間 / 文字間隔 */
+  --line-height-base: 1.5;
+  --line-height-heading: 1.2;
+  --letter-spacing-base: 0.02em;
+  --letter-spacing-heading: 0.05em;
+
+  /* フォントウェイト */
+  --font-weight-base: 100;
+  --font-weight-bold: 700;
+
+}
+
 html,
 body {
   max-width: 100vw;
@@ -6,11 +35,9 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: var(--primary);
+  background: var(--secondary);
+  font-family: var(--font-text);
 }
 
 * {
@@ -22,26 +49,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-/* テーブルスタイル */
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 1rem;
-}
-
-th,
-td {
-  border: 1px solid #ccc;
-  padding: 8px;
-  text-align: left;
-}
-
-th {
-  background-color: #f0f0f0;
-}
-
-.tb td:first-child {
-  font-weight: bold;
 }
