--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,21 +1,12 @@
 .container {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 20px;
+  height: 100vh;
+  padding: 0 10vw;
+  display: flex;
+  flex-direction: column;
 }
 
-.backButton {
-  padding: 8px 16px;
-  border: none;
-  border-radius: 4px;
-  background-color: #0070f3;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
-  margin-bottom: 16px;
-  transition: background-color 0.2s;
-}
+.sub_nav_wrapper {}
 
-.backButton:hover {
-  background-color: #005bb5;
+.base_table_wrapper {
+  width: 100%;
 }
