--- a/components/layout/Header/Header.module.css
+++ b/components/layout/Header/Header.module.css
@@ -1,96 +1,51 @@
+/* Header */
 .site_header {
-  background-color: #333;
-  color: white;
-  padding: 1rem 0;
+  height: 128px;
+  padding: 0 10vw;
+  display: flex;
+  align-items: center;
+  background: linear-gradient(90deg, rgba(255, 0, 140, 0.2) 0%, rgba(0, 21, 255, 0.2) 100%),
+    #828282;
 }
 
-.site_header .container {
-  margin: 0 auto;
+.container {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 2em;
 }
 
-.logo {
-  font-size: 1.5rem;
-  font-weight: bold;
+.title {
+  color: var(--secondary);
+  font-size: 48px;
+  line-height: 120%;
+  letter-spacing: 0.08rem;
+  font-weight: 500;
+  font-family: var(--font-heading);
 }
 
-.nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+
+/* Navigation */
+.nav {
   display: flex;
-  gap: 1.5rem;
+  gap: 20px;
 }
 
-.nav a {
-  color: white;
-  text-decoration: none;
-}
-
-.nav a:hover {
-  text-decoration: underline;
-}
-
-.Loginform_container {
-  color: #333;
-}
-
-.Loginform_button {
-  right: 0;
-
+.notify_button {
+  padding: 0;
+  display: inline-flex;
   background-color: transparent;
   border: none;
-  border-radius: 6px;
-  transition:
-    scale 0.5s ease,
-    background-position 0.5s ease;
-}
-.Loginform_button:hover {
-  scale: 1.1;
+  cursor: pointer;
 }
 
-.Loginform_icon_img {
-  width: 40px;
-  height: auto;
-  filter: brightness(0) invert(1);
+.icon_wrapper svg {
+  width: 45px;
+  height: 45px;
+  filter: drop-shadow(3px 3px 10px rgba(0, 0, 0, 0.25));
+  transition: transform 0.3s;
 }
 
-/* モーダルの背景 */
-.modalOverlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.5); /* 半透明の黒背景 */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
-
-/* モーダルの中身 */
-.modalContent {
-  background: white;
-  padding: 2rem;
-  border-radius: 1rem;
-  width: 400px;
-  max-width: 90%;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-  animation: fadeIn 0.3s ease;
-}
-
-/* アニメーション（お好み） */
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: scale(0.9);
-  }
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
+.notify_button:hover .icon_wrapper svg {
+  transform: scale(1.2);
 }
